# airbyte

airbyte-integrations/connectors/source-mailchimp/source_mailchimp/: source.py  streams.py
airbyte-integrations/connectors/source-mailchimp/source_mailchimp/schemas/: growth_history.json
airbyte-integrations/connectors/source-meteored/: README.md  acceptance-test-config.yml  main.py  metadata.yaml  pyproject.toml
airbyte-integrations/connectors/source-meteored/sample_files/: configured_catalog.json
airbyte-integrations/connectors/source-meteored/source_meteored/: __init__.py  run.py  source.py  spec.yaml
airbyte-integrations/connectors/source-meteored/source_meteored/schemas/: localidades.json
airbyte-integrations/connectors/source-meteored/unit_tests/: test_incremental_streams.py  test_source.py  test_streams.py
